Remove extra white spaces in labs screen. Fix lab test result table column widths and scroll
Workitems:
#12786 Labs - UI Changes in the Labs Screen
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C23014

--- a/ShipTech10/app/app-masters/assets/css/custom.css
+++ b/ShipTech10/app/app-masters/assets/css/custom.css
@@ -904,7 +904,7 @@ span.variance {
 }
 
 #grid_labTestResults {
-    height: 420px
+    height: 300px;
 }
 
 .form-group.delivery_result {
@@ -1022,7 +1022,7 @@ div#tabs_navigation {
     text-overflow: clip;
     white-space: normal;
     padding: 1px;
-    display: flex;
+display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
